[project]
name = "debugging-q4"
version = "0.1.0"
description = "CCHC Assessment Debugging Q4"
authors = [{ name = "Riviera Sperduto", email = "riviera.t.sperduto13@gmail.com" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "dash>=2.0.0",
    "pandas>=1.3.0",
    "numpy>=1.21.0",
]
